adding a new string related to upgrading to Pro versions

--- a/commons/src/main/res/values-cs/strings.xml
+++ b/commons/src/main/res/values-cs/strings.xml
@@ -602,7 +602,8 @@
     <string name="sunday_short">Ne</string>
 
     <!-- Pro version -->
-    <string name="upgrade_to_pro_long">Tato verze aplikace již není podporována. Prosím přejděte na Pro verzi.</string>
+    <string name="upgrade_to_pro_long">Your app version will not be updated anymore. Please upgrade to the Pro version to receive new fixes and other improvements.</string>
+    <string name="upgrade_to_pro_long_click">Your app version will not be updated anymore. Please upgrade to the Pro version to receive new fixes and other improvements by clicking here.</string>
     <string name="it_is_free">Bude bezplatná do: %s. Pokud si ji do té doby stáhnete, budete ji moci používat bezplatně navždy.</string>
     <string name="more_info">Více informací</string>
     <string name="upgrade">Stáhnout</string>
