--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -602,7 +602,8 @@
     <string name="sunday_short">Ne</string>
 
     <!-- Pro version -->
-    <string name="upgrade_to_pro_long">Táto verzia aplikácie už nie je podporovaná. Prosím prejdite na Pro verziu.</string>
+    <string name="upgrade_to_pro_long">Vaša verzia aplikácie už nebude dostávať aktualizácie. Pre nové opravy a iné vylepšenia si prosím stiahnite Pro verziu.</string>
+    <string name="upgrade_to_pro_long_click">Vaša verzia aplikácie už nebude dostávať aktualizácie. Pre nové opravy a iné vylepšenia si prosím stiahnite Pro verziu kliknutím sem.</string>
     <string name="it_is_free">Je do bezplatné do: %s. Ak ju dovtedy stiahnete, budete ju môcť zadarmo navždy používať.</string>
     <string name="more_info">Viac info</string>
     <string name="upgrade">Stiahnuť</string>
