--- a/commons/src/main/res/values-sr/strings.xml
+++ b/commons/src/main/res/values-sr/strings.xml
@@ -568,7 +568,8 @@
     <string name="sunday_short">Нед</string>
 
     <!-- Pro version -->
-    <string name="upgrade_to_pro_long">Ова верзија апликације се више не одржава. Унапредите се на професионалну верзију.</string>
+    <string name="upgrade_to_pro_long">Your app version will not be updated anymore. Please upgrade to the Pro version to receive new fixes and other improvements.</string>
+    <string name="upgrade_to_pro_long_click">Your app version will not be updated anymore. Please upgrade to the Pro version to receive new fixes and other improvements by clicking here.</string>
     <string name="it_is_free">Бесплатна је до: %s. Ако је преузмете до тада, моћи ћете да је користите бесплатно заувек.</string>
     <string name="more_info">Више информација</string>
     <string name="upgrade">Унапређивање</string>
