--- a/commons/src/main/res/values-sv/strings.xml
+++ b/commons/src/main/res/values-sv/strings.xml
@@ -569,7 +569,8 @@
     <string name="sunday_short">Sön</string>
 
     <!-- Pro version -->
-    <string name="upgrade_to_pro_long">Den här versionen av appen underhålls inte längre. Uppgradera till Pro-versionen.</string>
+    <string name="upgrade_to_pro_long">Your app version will not be updated anymore. Please upgrade to the Pro version to receive new fixes and other improvements.</string>
+    <string name="upgrade_to_pro_long_click">Your app version will not be updated anymore. Please upgrade to the Pro version to receive new fixes and other improvements by clicking here.</string>
     <string name="it_is_free">Den är gratis fram till: %s. Om du hämtar den innan dess, kan du använda den kostnadsfritt för all framtid.</string>
     <string name="more_info">Mer information</string>
     <string name="upgrade">Uppgradera</string>
