--- a/commons/src/main/res/values-cy/strings.xml
+++ b/commons/src/main/res/values-cy/strings.xml
@@ -693,7 +693,8 @@
     <string name="sunday_short">Sul</string>
 
     <!-- Pro version -->
-    <string name="upgrade_to_pro_long">Ni chynhelir y fersiwn hwn o\'r ap mwyach. Uwchraddia i\'r fersiwn Pro.</string>
+    <string name="upgrade_to_pro_long">Your app version will not be updated anymore. Please upgrade to the Pro version to receive new fixes and other improvements.</string>
+    <string name="upgrade_to_pro_long_click">Your app version will not be updated anymore. Please upgrade to the Pro version to receive new fixes and other improvements by clicking here.</string>
     <string name="it_is_free">Mae am ddim tan: %s. Os wyt yn ei lawrlwytho cyn hynny, bydd yn bosib ei ddefnydido am ddim am byth.</string>
     <string name="more_info">Mwy o wybodaeth</string>
     <string name="upgrade">Uwchraddio</string>
