--- a/commons/src/main/res/values-da/strings.xml
+++ b/commons/src/main/res/values-da/strings.xml
@@ -569,7 +569,8 @@
     <string name="sunday_short">Søn</string>
 
     <!-- Pro version -->
-    <string name="upgrade_to_pro_long">Denne version af appen vedligeholdes ikke længere. I stedet er der kommet en Pro-version du kan opgradere til.</string>
+    <string name="upgrade_to_pro_long">Your app version will not be updated anymore. Please upgrade to the Pro version to receive new fixes and other improvements.</string>
+    <string name="upgrade_to_pro_long_click">Your app version will not be updated anymore. Please upgrade to the Pro version to receive new fixes and other improvements by clicking here.</string>
     <string name="it_is_free">Den er stadig gratis indtil: %s. Downloader du den indtil da kan du blive ved at bruge den gratis fremover.</string>
     <string name="more_info">Yderligere oplysninger</string>
     <string name="upgrade">Opgrader</string>
