--- a/commons/src/main/res/values-hr/strings.xml
+++ b/commons/src/main/res/values-hr/strings.xml
@@ -600,7 +600,8 @@
     <string name="sunday_short">Ned</string>
 
     <!-- Pro version -->
-    <string name="upgrade_to_pro_long">Ova verzija aplikacije više se ne održava. Nadogradite na verziju Pro.</string>
+    <string name="upgrade_to_pro_long">Your app version will not be updated anymore. Please upgrade to the Pro version to receive new fixes and other improvements.</string>
+    <string name="upgrade_to_pro_long_click">Your app version will not be updated anymore. Please upgrade to the Pro version to receive new fixes and other improvements by clicking here.</string>
     <string name="it_is_free">Besplatno je do: %s. Ako je preuzmete do tada, moći ćete je koristiti zauvijek.</string>
     <string name="more_info">Više informacija</string>
     <string name="upgrade">Nadogradi</string>
