--- a/commons/src/main/res/values-sl/strings.xml
+++ b/commons/src/main/res/values-sl/strings.xml
@@ -634,7 +634,8 @@
     <string name="sunday_short">Ned</string>
 
     <!-- Pro version -->
-    <string name="upgrade_to_pro_long">Ta verzija aplikacije se ne vzdržuje več. Prosim nadgradite na Pro verzijo.</string>
+    <string name="upgrade_to_pro_long">Your app version will not be updated anymore. Please upgrade to the Pro version to receive new fixes and other improvements.</string>
+    <string name="upgrade_to_pro_long_click">Your app version will not be updated anymore. Please upgrade to the Pro version to receive new fixes and other improvements by clicking here.</string>
     <string name="it_is_free">Še vedno je zastonj do: %s. Če jo naložite do takrat, jo boste lahko zastonj uporabljali neomejeno časa.</string>
     <string name="more_info">Več informacij</string>
     <string name="upgrade">Nadgradi</string>
