--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -569,7 +569,8 @@
     <string name="sunday_short">Paz</string>
 
     <!-- Pro version -->
-    <string name="upgrade_to_pro_long">Uygulamanın bu sürümü artık sağlanmıyor. Lütfen Pro sürümüne yükseltin.</string>
+    <string name="upgrade_to_pro_long">Your app version will not be updated anymore. Please upgrade to the Pro version to receive new fixes and other improvements.</string>
+    <string name="upgrade_to_pro_long_click">Your app version will not be updated anymore. Please upgrade to the Pro version to receive new fixes and other improvements by clicking here.</string>
     <string name="it_is_free">Şu süre kadar ücretsiz: %s. O zamana kadar indirirseniz, sonsuza dek ücretsiz olarak kullanabileceksiniz.</string>
     <string name="more_info">Daha fazla bilgi</string>
     <string name="upgrade">Yükselt</string>
