--- a/commons/src/main/res/values-uk/strings.xml
+++ b/commons/src/main/res/values-uk/strings.xml
@@ -569,7 +569,8 @@
     <string name="sunday_short">Нед</string>
 
     <!-- Pro version -->
-    <string name="upgrade_to_pro_long">Ця версія додатка більше не підтримується. Будь ласка, оновіть додаток до версії Pro.</string>
+    <string name="upgrade_to_pro_long">Your app version will not be updated anymore. Please upgrade to the Pro version to receive new fixes and other improvements.</string>
+    <string name="upgrade_to_pro_long_click">Your app version will not be updated anymore. Please upgrade to the Pro version to receive new fixes and other improvements by clicking here.</string>
     <string name="it_is_free">Це безкоштовно до: %s. Якщо ви завантажите додаток до вказаної дати, ви отримаєте його безкоштовно назавжди.</string>
     <string name="more_info">Більше інформації</string>
     <string name="upgrade">Оновити</string>
